--- a/frontend-web/webclient/app/SiteComponents/Navigation/Sidebar.scss
+++ b/frontend-web/webclient/app/SiteComponents/Navigation/Sidebar.scss
@@ -36,7 +36,8 @@ a.sidebar-option {
 }
 .ui.vertical.my-sidebar {
     width: 260px;
-    background-color: #f7f9fa;
+    //background-color: #f7f9fa;
+    background-color: #FAFAFA;
 }
 
 a.sidebar-option div.item.item-padding-right {
